# web_scraping

./: paragraphs.json  pyproject.toml
tests/: test_web_scraping.py
web_scraping/: web_scraping.py
